# ClothGL

./: CMakeLists.txt  README.md  run_prog.sh
include/: Ball.h  Constraint.h  Force.h  Shader.h  Vector3.h
src/cpp/: Ball.cpp  Constraint.cpp  Force.cpp  Vector3.cpp  glad.c  main.cpp
src/glsl/: shader.frag  shader.vert
